link and layout shift fix

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,11 @@
 .footer-wrapper {
   background: var(--background-color-light-grey);
+  min-width: 100%;
 }
 
+.footer.block {
+  min-width: 100%;
+}
 .footer.block .section.footer-top-note {
   padding-top: 0;
   padding-bottom: 1.25rem;
